# Cascade

./: .gitignore  CAPABILITIES_REPORT.md  KNOWN_GAPS.md  LICENSE  Makefile  README.md  ROADMAP.md  SPEC_SHEET.md  VALIDATION_REPORT.md  package-lock.json  pyproject.toml  reshoot.mjs  tokens.json
apps/api/: Makefile  README.md  deps.py  jobs.py  main.py  models.py  pyproject.toml  rotor_pdf.py  seed.py
apps/api/routers/: __init__.py  _meanline_geom.py  analysis.py  candidates.py  components.py  cycle.py  explore.py  loss_models.py  manufacturability.py  map.py  materials.py  projects.py  rotor.py  validation.py
apps/api/tests/: conftest.py  test_burner_fuel_mode.py  test_candidate_geometry_wiring.py  test_candidate_handoff.py  test_component_save_through.py  test_cycle_field_patches.py  test_explore_manufacturability.py  test_job_refusal_contract.py  test_live_meanline_cycle_page.py  test_plugin_endpoints.py  test_rotor_router.py  test_smoke.py  test_storage_isolation.py
apps/web/: DESIGN_OVERHAUL.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
docs/plans/: 2026-06-09-001-feat-small-gas-turbine-release-plan.md
docs/research/: competitive-landscape.md
docs/residual-review-findings/: feat-small-gas-turbine-release.md
independent_verification/: .gitignore  README.md  REPORT.md  _inputs.py  conftest.py  pytest.ini  run_report.py
independent_verification/tests/: test_cycle_thermo.py  test_journal_bearing.py  test_materials_bounds.py  test_meanline_centrifugal.py  test_meanline_radial.py  test_optimization.py  test_rotordynamics.py  test_slip_factors.py  test_sobol_explore.py  test_units_quantities.py
scripts/: build_capabilities_pdf.py  check_citations.py  citation_registry.yaml
src/cascade/: __init__.py  cli.py  units.py
tests/: conftest.py
tests/cad/: test_export_structural_validity.py  test_fluid_volume_export.py  test_turbogrid_ndf.py
tests/cli/: test_cli_export.py  test_cli_sweep.py
tests/cycle/: test_co_simulation.py  test_cyc1_simple_brayton.py  test_cyc2_recuperated_brayton.py  test_cyc3_capstone_c30.py  test_energy_balance.py  test_ideal_brayton_property.py  test_multi_shaft.py  test_nasafluid_brayton_property.py  test_open_brayton_pr_mismatch.py  test_solver_input_validation.py
tests/explore/: test_design_space.py  test_parallel.py  test_sobol_sampler.py
tests/geometry/: test_blade_camber.py  test_glb_round_trip.py  test_impeller_mesh.py  test_impeller_scaling.py  test_passage_height.py  test_radial_turbine_mesh.py  test_rotor_mesh.py  test_step_iges_export.py  test_vendor_exports.py  test_volute_mesh.py
tests/integration/: test_air_standard_http.py  test_analysis_real_solver.py  test_api_refusal_closures.py  test_corrected_flow_api.py  test_cycle_cosim.py  test_cycle_unknown_unit.py  test_explore_real_meanline.py  test_export_honesty.py  test_inverse_solve_pr_bc.py  test_map_real_meanline.py  test_mechanical_efficiency_wired.py  test_outlet_pressure_static_bc.py  test_plugin_sandbox.py  test_project_persistence.py  test_rotor_endpoint_refusal.py  (+5 more)
(+343 files in other folders)
