[project]
name = "cascade"
version = "0.1.0"
description = "Cascade — open turbomachinery design environment"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Cascade contributors" }]
dependencies = [
    "pint>=0.24",
    "numpy>=1.26",
    "scipy>=1.13",
    "pydantic>=2.7",
    "tomli-w>=1.0",
    "coolprop>=6.6 ; python_version < '3.13'",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "reportlab>=4.0",
]
# ADAPT-033 — CAD-universal export (STEP / IGES via OpenCASCADE).
# Heavy (~200 MB compiled OCC C++); intentionally optional. Conda is the
# more reliable install channel — pip wheels exist but are missing on
# some Python/OS combos. The cascade.geometry.export module imports OCC
# lazily so a vanilla install never touches this code path.
cad = [
    "pythonocc-core>=7.7.0",
]

[project.scripts]
cascade = "cascade.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cascade"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/cascade"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "validation: marks tests as part of the public validation suite",
    "slow: marks slow tests",
    "numerical: marks numerical-regression-snapshot tests",
    "spec_parity: marks tests as covering a SPEC_SHEET.md §2 'In v1' bullet (CI-02)",
    "regression: marks locked regression tests for adaptation items (CI-03)",
    "integration: marks integration tests that exercise end-to-end solver paths",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "ANN", "RUF"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
